=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

all changes without author attribution are by Doug MacEachern

=over 3

=item 1.26_01-dev

PERL5LIB support now properly unshifts paths into @INC rather than push
[Tatsuhiko Miyagawa <miyagawa@edge.co.jp>]

do not clear symbol tables within a package in perl_clear_symtab()
used by directive handler extensions
[Stephen Clouse <stephenc@theiqgroup.com>]

properly deal with $r->status codes (e.g. redirect) in
Apache::RegistryNG [Geoff Young <geoff@modperlcookbook.org>]

properly escape highbit chars in Apache::Utils::escape_html
[Geoff Young <geoff@modperlcookbook.org>,
Robin Berjon <robin@knowscape.com>]

allow $r->auth_name and $r->auth_type to be set on win32
[John Kelly <john_kelly@uk.ibm.com>]

fix compilation for win32 w/ apache 1.3.22+
[Randy Kobes <randy@theoryx5.uwinnipeg.ca>]

fix multiple %LocationMatch in <Perl> sections bug
[Salvador Ortiz Garcia <sog@msg.com.mx>]

rip -D_GNU_SOURCE out of Perl 5.7.3+'s ccflags, which modperl doesn't
need and apache won't compile with [Stas Bekman <stas@stason.org>]

make sure PerlSetEnv variables are visible after first access
to each child [Geoff Young <geoff@modperlcookbook.org>]

workaround Apache::Constants::AUTOLOAD problem with bleedperl

the first flag argument to perl cannot start with space, since perl tries 
to open the " -spi.bak" as a file. fix that in the win32 case.
[Stas Bekman <stas@stason.org>]

starting from perl 5.7.3 for tied filehandles, tiedscalar magic is applied 
to the IO slot of the GP rather than the GV itself. adjust the TIEHANDLE 
macro to work properly under 5.7.3+. [Charles Jardine <cj10@cam.ac.uk>, 
Stas Bekman <stas@stason.org>]

added perl_perl_merge_dir_config and array_header2avrv symbols to
mod_perl.def for win32 and mod_perl.exp for aix.
[Randy Kobes <randy@theoryx5.uwinnipeg.ca>]

INSTALL.apaci: added an explanation of how perl has to be built in
order to use DSO without problems (copied from the guide) based on